--- a/mapa/mapa.html
+++ b/mapa/mapa.html
@@ -2,22 +2,65 @@
 <html>
 
   <head>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Mapa | Anotações colaborativas web</title>
   <meta charset='utf-8' />
   <meta http-equiv="X-UA-Compatible" content="chrome=1" />
   <meta name="description" content="Searchlight Facilitando a visualização de informações crowdsourcing em Mapas Web através de Zoom.." />
+
   <link rel="stylesheet" type="text/css" media="screen" href="css/exemplos.css">
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/font-awesome.min.css" rel="stylesheet">
+  <link href="../css/animate.min.css" rel="stylesheet">
+  <link href="../css/prettyPhoto.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/responsive.css" rel="stylesheet">
+  <link href="../css/scrolling-nav.css" rel="stylesheet">
 
   <script src="js/searchlight.js"></script>
   <script src="js/exemplo2.js"></script>
 
-  <title>Searchlight</title>
+  <link rel="shortcut icon" href="../images/ico/favicon.ico">
+
   </head>
 
-  <body onload="javascript:exemplos();">
+  <body onload="javascript:exemplos();" class="homepage">
 
- 
-<div id='map_gdoc'> </div>
-    
+  <header id="header">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="banner">
+      <div class="container">
+        <div class="navbar-header page-scroll">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <h2 style="margin-left: -10px">Anotação Web Colaborativa</h2>
+        </div>
+
+        <div class="collapse navbar-collapse navbar-right ">
+          <ul class="nav navbar-nav">
+            <li><a class="page-scroll" href="../index.html">Site do projeto</a></li>
+          </ul>
+
+        </div>
+
+      </div><!--/.container-->
+    </nav><!--/nav-->
+
+  </header><!--/header-->
+  <div class="container">
+
+    <!-- projeto -->
+    <div class="skill-wrap clearfix">
+      <br><br>
+        <div id='map_gdoc'> </div>
+
+    </div><!--/.container-->
 
   </body>
 </html>
